--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
 					</div>
 				</div>		
 				<div class="row py-5">
-					<div class="col-lg-6 text-center">
+					<div class="col-lg-6 col-sm-12 text-center">
 						<div class="company-item w-75">
 							<h3 class="text-uppercase">html 5</h3>
 						</div>
@@ -243,7 +243,7 @@
 							<h3 class="text-uppercase">Flutter</h3>
 						</div>
 					</div>
-					<div class="col-lg-6">
+					<div class="col-lg-6 col-sm-12">
 						<img src="img/skrill.png" class="img-fluid" alt="">
 					</div>
 				</div>
