--- a/index.html
+++ b/index.html
@@ -224,22 +224,22 @@
 				</div>		
 				<div class="row py-5">
 					<div class="col-lg-6 col-sm-12 text-center">
-						<div class="company-item w-75">
+						<div class="company-item">
 							<h3 class="text-uppercase">html 5</h3>
 						</div>
-						<div class="company-item w-75">
+						<div class="company-item">
 							<h3 class="text-uppercase">css</h3>
 						</div>
-						<div class="company-item w-75">
+						<div class="company-item">
 							<h3 class="text-uppercase">JavaScript</h3>
 						</div>
-						<div class="company-item w-75">
+						<div class="company-item">
 							<h3 class="text-uppercase">Bootstrap 5</h3>
 						</div>
-						<div class="company-item w-75">
+						<div class="company-item">
 							<h3 class="text-uppercase">Dart</h3>
 						</div>
-						<div class="company-item w-75">
+						<div class="company-item">
 							<h3 class="text-uppercase">Flutter</h3>
 						</div>
 					</div>
