--- a/paginas/pagina1.html
+++ b/paginas/pagina1.html
@@ -4,19 +4,19 @@
 <title>Página 1</title>
 
 <!-- CSS Bootstrap-->
-<link rel="stylesheet" href="../css/bootstrap.min.css">
+<link rel="stylesheet" href="https://wellington-luc.github.io/site-responsivo/css/bootstrap.min.css">
 
 <!-- font awesome icons-->
-<link rel="stylesheet" href="../icons/css/all.min.css">
+<link rel="stylesheet" href="https://wellington-luc.github.io/site-responsivo/icons/css/all.min.css">
 
 <!-- Custom CSS -->
-<link rel="stylesheet" type="text/css" href="../css/style2.css">
+<link rel="stylesheet" type="text/css" href="https://wellington-luc.github.io/site-responsivo/css/style.css">
 
 <!-- Responsive css file -->
-<link rel="stylesheet" href="../css/responsive.css">
+<link rel="stylesheet" href="https://wellington-luc.github.io/site-responsivo/css/responsive.css">
 
 <!-- Ícone -->
-<link rel="shortcut icon" href="../img/icon.png">
+<link rel="shortcut icon" href="https://wellington-luc.github.io/site-responsivo/img/icon.png">
 
 
 
