--- a/index.html
+++ b/index.html
@@ -308,11 +308,11 @@
 	</main>
 		
 <!--======================================================= JS File Bootstrap ==============================================================-->
-<script type="text/javascript" src="js/bootstrap.min.js"></script>
+<script type="text/javascript" src="https://wellington-luc.github.io/site-responsivo/js/bootstrap.min.js"></script>
 
 <!--============================================================= JQuery ===================================================================-->
-<script src="js/jquery.min.js"></script>
-<script src="js/poper.js"></script>
+<script src="https://wellington-luc.github.io/site-responsivo/js/jquery.min.js"></script>
+<script src="https://wellington-luc.github.io/site-responsivo/js/poper.js"></script>
 
 <!--=========================================================== Script Navbar ==============================================================-->
 <script>
@@ -322,7 +322,7 @@
 </script>
 
 <!--=============================================================== Banner JS ==============================================================-->
-<script src="js/banner.js"></script>
+<script src="https://wellington-luc.github.io/site-responsivo/js/banner.js"></script>
 </body>
 </html>
 
