--- a/paginas/pagina2.html
+++ b/paginas/pagina2.html
@@ -198,10 +198,10 @@
 	</main>
 		
 <!--======================================================= JS File Bootstrap ==============================================================-->
-<script type="text/javascript" src="../js/bootstrap.min.js"></script>
+<script type="text/javascript" src="https://wellington-luc.github.io/site-responsivo/js/bootstrap.min.js"></script>
 
 <!--============================================================= JQuery ===================================================================-->
-<script src="../js/jquery.min.js"></script>
+<script src="https://wellington-luc.github.io/site-responsivo/js/jquery.min.js"></script>
 
 <!--=========================================================== Script Navbar ==============================================================-->
 <script>
@@ -209,8 +209,6 @@
 	$('nav').toggleClass('scrolled', $(this).scrollTop() > 200);
 	});
 </script>
-
-<!--=============================================================== Banner JS ==============================================================-->
 </body>
 </html>
 
